Updating the code

--- a/Research Website.html
+++ b/Research Website.html
@@ -123,6 +123,26 @@
 				<p>In this alternative approach, efforts could be made to minimize the potential risks associated with the fiscal deficit, monetary financing, borrowing, or taxation,
 				as outlined in the existing literature, while maximizing the potential benefits highlighted by dissenting economists and select studies within the literature.</p>
 			</div>
+			
+			<div class="ResearchObjective">
+				<br>
+				<h1>Research Objective</h1>
+				<h2>Main Objective</h2>
+				<p>This study focuses on preserving macroeconomic stability by using a systematic solution to optimize budgetary source amounts to finance government expenditure in 
+				order to minimize the risk associated with it while maximizing the benefit associated with it. Hence, the identification of the optimum budgetary source amount for a
+				given expenditure amount is the main objective of the study.</p>
+				<br>
+				<h2>Sub Objective</h2>
+				<p>The budgetary source amounts have to be predicted for the following years to be optimized later. Predictive models will have to be used for this purpose. In order 
+				to optimize the budgetary sources, the relationship between those and the considered macroeconomic variables has to be identified. Using the relationship, the 
+				budgetary sources such as monetary financing can be optimized based on given targets. A web application has to be developed to provide a user interface to input 
+				defined targets based on which the budgetary sources are optimized. </p>
+			</div>
+			
+			<div class="method">
+				<br>
+				<h1>Methodology</h1>
+			</div>
 		</div>
 
 		<script>
