--- a/Research Website.html
+++ b/Research Website.html
@@ -4,8 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="Styles/styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	</head>
+	
 	<body>
 		<div class="website">
 			<div class="topnav" id="myTopnav">
@@ -372,7 +371,7 @@
 					
 				</div>
 			</div>
-			
+			<br><br>
 			<div class="Milestones">
 				<p class="mile">Milestones</p>
 				<h1>Timeline</h1>
@@ -384,43 +383,62 @@
 						  <div id="content">
 							<ul class="timeline-1 text-black">
 							  <li class="event" data-date="March 2023">
-								<h4 class="mb-3">Proposal Presentation</h4>
+								<h2 class="mb-3">Proposal Presentation</h2>
 								<p>A project proposal was presented to the panel in order to explain the impact of the research and to attaract potential investors.</p>
 								<b><p>Marks Allocated: </b> 6 </p>
 								<progress class="progress" value="6" max="100"></progress>
 							  </li>
 							   <li class="event" data-date="May 2023">
-								<h4 class="mb-3 pt-3">Proposal Report</h4>
+								<h2 class="mb-3 pt-3">Proposal Report</h2>
 								<p>A comprehensive document was submitted to the research panel to tell them about what our research was about.	</p>
 								<b><p>Marks Allocated: </b> 6 </p>
 								<progress class="progress" value="12" max="100"></progress>
 							  </li>
 							  <li class="event" data-date="May 2023">
-								<h4 class="mb-3 pt-3">Progress Presentation I</h4>
+								<h2 class="mb-3 pt-3">Progress Presentation I</h2>
 								<p>Progress Presentation I assesses the project's status at 50% completion, helping to identify any design or requirement issues and gaps in the process.
 								</p>
 								<b><p>Marks Allocated: </b> 15 </p>
 								<progress class="progress" value="27" max="100"></progress>
 							  </li>
 							  <li class="event" data-date="June 2023">
-								<h4 class="mb-3 pt-3">Research Paper</h4>
+								<h2 class="mb-3 pt-3">Research Paper</h2>
 								<p>Explain how your work adds to what is already known, acknowledging the contributions of others in a clear and straightforward manner.</p>
 								<b><p>Marks Allocated: </b> 10 </p>
 								<progress class="progress" value="37" max="100"></progress>
 							  </li>
 							  <li class="event" data-date="September 2023">
-								<h4 class="mb-3 pt-3">Progress Presentation II</h4>
+								<h2 class="mb-3 pt-3">Progress Presentation II</h2>
 								<p class="mb-0">Progress Presentation II assesses the project when it's 90% complete, and it includes a poster presentation that provides an overview 
 								of the entire project.</p>
 								<b><p>Marks Allocated: </b> 10 </p>
 								<progress class="progress" value="47" max="100"></progress>
 							  </li>
 							  <li class="event" data-date="October 2023">
-								<h4 class="mb-3 pt-3">Final Presentation and Viva</h4>
+								<h2 class="mb-3 pt-3">Final Presentation and Viva</h2>
 								<p class="mb-0">Final Presentation assesses how we can verify the research and individual viva is held to assess each members contribution individually.
 								</p>
-								<b><p>Marks Allocated: </b> 10 </p>
-								<progress class="progress" value="47" max="100"></progress>
+								<b><p>Marks Allocated: </b> 12 </p>
+								<progress class="progress" value="49" max="100"></progress>
+							  </li>
+							   <li class="event" data-date="November 2023">
+								<h2 class="mb-3 pt-3">Project Website</h2>
+								<p class="mb-0">Final Presentation assesses how we can verify the research and individual viva is held to assess each members contribution individually.
+								</p>
+								<b><p>Marks Allocated: </b> 2 </p>
+								<progress class="progress" value="51" max="100"></progress>
+							  </li>
+							  <li class="event" data-date="November 2023">
+								<h2 class="mb-3 pt-3">Research Logbook</h2>
+								<p class="mb-0">The project status is confirmed by checking the project logbook, which also includes status documents 1 and 2.</p>
+								<b><p>Marks Allocated: </b> 2 </p>
+								<progress class="progress" value="53" max="100"></progress>
+							  </li>
+							  <li class="event" data-date="November 2023">
+								<h2 class="mb-3 pt-3">Final Report</h2>
+								<p class="mb-0">The project status is confirmed by checking the project logbook, which also includes status documents 1 and 2.</p>
+								<b><p>Marks Allocated: </b> 2 </p>
+								<progress class="progress" value="53" max="100"></progress>
 							  </li>
 							</ul>
 						  </div>
