Updated the timeline section

--- a/Research Website.html
+++ b/Research Website.html
@@ -411,34 +411,34 @@
 								<h2 class="mb-3 pt-3">Progress Presentation II</h2>
 								<p class="mb-0">Progress Presentation II assesses the project when it's 90% complete, and it includes a poster presentation that provides an overview 
 								of the entire project.</p>
-								<b><p>Marks Allocated: </b> 10 </p>
-								<progress class="progress" value="47" max="100"></progress>
+								<b><p>Marks Allocated: </b> 18 </p>
+								<progress class="progress" value="55" max="100"></progress>
 							  </li>
 							  <li class="event" data-date="October 2023">
 								<h2 class="mb-3 pt-3">Final Presentation and Viva</h2>
 								<p class="mb-0">Final Presentation assesses how we can verify the research and individual viva is held to assess each members contribution individually.
 								</p>
-								<b><p>Marks Allocated: </b> 12 </p>
-								<progress class="progress" value="49" max="100"></progress>
+								<b><p>Marks Allocated: </b> 20 </p>
+								<progress class="progress" value="75" max="100"></progress>
 							  </li>
 							   <li class="event" data-date="November 2023">
 								<h2 class="mb-3 pt-3">Project Website</h2>
 								<p class="mb-0">Final Presentation assesses how we can verify the research and individual viva is held to assess each members contribution individually.
 								</p>
 								<b><p>Marks Allocated: </b> 2 </p>
-								<progress class="progress" value="51" max="100"></progress>
+								<progress class="progress" value="77" max="100"></progress>
 							  </li>
 							  <li class="event" data-date="November 2023">
-								<h2 class="mb-3 pt-3">Research Logbook</h2>
+								<h2 class="mb-3 pt-3">Research Logbook and Progress Reports</h2>
 								<p class="mb-0">The project status is confirmed by checking the project logbook, which also includes status documents 1 and 2.</p>
-								<b><p>Marks Allocated: </b> 2 </p>
-								<progress class="progress" value="53" max="100"></progress>
+								<b><p>Marks Allocated: </b> 4 </p>
+								<progress class="progress" value="81" max="100"></progress>
 							  </li>
 							  <li class="event" data-date="November 2023">
 								<h2 class="mb-3 pt-3">Final Report</h2>
 								<p class="mb-0">The project status is confirmed by checking the project logbook, which also includes status documents 1 and 2.</p>
-								<b><p>Marks Allocated: </b> 2 </p>
-								<progress class="progress" value="53" max="100"></progress>
+								<b><p>Marks Allocated: </b> 19 </p>
+								<progress class="progress" value="100" max="100"></progress>
 							  </li>
 							</ul>
 						  </div>
