--- a/Research Website.html
+++ b/Research Website.html
@@ -4,15 +4,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="Styles/styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<body>
-		<div class="website">
 			<div class="topnav" id="myTopnav">
 				<div class="logoname">
 					<img src="Images/logo.png" width="100" height="100">
 				</div>
 				
-				<div class="navcontent">
+				<div class="nazvcontent">
 				  <a href="#" class="active">Home</a>
 				   <div class="dropdown">
 					<button class="dropbtn">Project Scope 
