--- a/Research Website.html
+++ b/Research Website.html
@@ -4,12 +4,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="Styles/styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	
+	<body>
+		<div class="website">
 			<div class="topnav" id="myTopnav">
 				<div class="logoname">
 					<img src="Images/logo.png" width="100" height="100">
 				</div>
 				
-				<div class="nazvcontent">
+				<div class="navcontent">
 				  <a href="#" class="active">Home</a>
 				   <div class="dropdown">
 					<button class="dropbtn">Project Scope 
