--- a/Research Website.html
+++ b/Research Website.html
@@ -461,8 +461,9 @@
 				<div class="docs">
 						<div class="card" style="width: 30rem;">
 						  <div class="card-body">
-							
-								<img src="Images/pdf.jpg" alt="PDF logo" width="20px" height="20px">&nbsp
+							<div class="pdf-logo">
+								<img src="Images/pdf.jpg" alt="PDF logo" width="20px" height="20px">
+							</div>
 							<h5 class="card-title">Topic Assessement</h5>
 							<br>
 							<h6 class="card-subtitle mb-2 text-muted">Submitted on 13/02/2023</h6>
