Adding the documents

--- a/Research Website.html
+++ b/Research Website.html
@@ -459,21 +459,26 @@
 				<p>The documents that were used for this research are given below.</p>
 				
 				<div class="docs">
-						<div class="card" style="width: 20rem;">
+					<div class="row">
+					  <div class="col-sm-6">
+						<div class="card">
 						  <div class="card-body">
-							<div class="pdf-logo">
-								<img src="Images/pdf.jpg" alt="PDF logo" width="20px" height="20px">
-							</div>
-							<div class="card-content">
-								<h5 class="card-title">Topic Assessement</h5>
-							</div>
-							<br>
-							<h6 class="card-subtitle mb-2 text-muted">Submitted on 13/02/2023</h6>
-							<br><br>
-							<p class="card-link">Group</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-							<a href="#" class="card-link">Download</a>
+							<h5 class="card-title">Special title treatment</h5>
+							<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+							<a href="#" class="btn btn-primary">Go somewhere</a>
 						  </div>
 						</div>
+					  </div>
+					  <div class="col-sm-6">
+						<div class="card">
+						  <div class="card-body">
+							<h5 class="card-title">Special title treatment</h5>
+							<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+							<a href="#" class="btn btn-primary">Go somewhere</a>
+						  </div>
+						</div>
+					  </div>
+					</div>
 				</div>
 			</div>
 		</div>
