Adding the Meet Our Team section

--- a/Research Website.html
+++ b/Research Website.html
@@ -650,6 +650,21 @@
 			<div class="aboutus">
 				<p class="AU">About Us</p>
 				<h1>Meet Our Team</h1>
+				<br>
+				<div class="card" style="width: 18rem;">
+				  <img src="..." class="card-img-top" alt="...">
+				  <div class="card-body">
+					<b><h5 class="card-title">Mr. Vishan Jayasinghearachchi</b></h5>
+					<br>
+					<b><h6>Supervisor</b></h6>
+					<p>Sri Lanka Institute of Information Technology</p>
+					<b><h6>Department</b></h6>
+					<p>Information Technology</p>
+					<br>
+					<hr>
+					<a class="card-text mr-4" style="cursor: pointer;" href="https://scholar.google.com/citations?hl=en&user=3ETcvLMAAAAJ"><svg class="svg-inline--fa fa-google fa-w-16 mr-2" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="google" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 488 512" data-fa-i2svg=""><path fill="currentColor" d="M488 261.8C488 403.3 391.1 504 248 504 110.8 504 0 393.2 0 256S110.8 8 248 8c66.8 0 123 24.5 166.3 64.9l-67.5 64.9C258.5 52.6 94.3 116.6 94.3 256c0 86.5 69.1 156.6 153.7 156.6 98.2 0 135-70.4 140.8-106.9H248v-85.3h236.1c2.3 12.7 3.9 24.9 3.9 41.4z"></path></svg><!-- <i class="fab fa-google mr-2"></i> Font Awesome fontawesome.com -->G-Scholar</a>
+				  </div>
+				</div>
 			</div>
 		</div>
 			
