--- a/Research Website.html
+++ b/Research Website.html
@@ -663,8 +663,6 @@
 						<p>Sri Lanka Institute of Information Technology</p>
 						<b><h6>Department</b></h6>
 						<p>Information Technology</p>
-						<br>
-						<hr>
 						<a class="card-text mr-4" style="cursor: pointer;" href="https://scholar.google.com/citations?hl=en&user=3ETcvLMAAAAJ"><img src="Images/gscholar.png" width="35px" height="35px"></img></a>
 					  </div>
 					</div>
@@ -681,8 +679,7 @@
 						<p>Sri Lanka Institute of Information Technology</p>
 						<b><h6>Department</b></h6>
 						<p>Information Technology</p>
-						<br>
-						<hr>
+						<center>
 						<ul class="list-group list-group-flush">
 							<li class="list-group-item">
 							  <a class="card-text mr-4" style="cursor: pointer;" href="https://scholar.google.com/citations?user=oiEXkr4AAAAJ&hl=en"><img src="Images/gscholar.png" width="35px" height="35px"></img></a>
@@ -690,6 +687,7 @@
 							  <a class="card-text mr-4" style="cursor: pointer;" href="https://www.linkedin.com/in/lakmini-abeywardhana-65283aa9/"><svg class="svg-inline--fa fa-linkedin-in fa-w-14 mr-2" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin-in" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"></path></svg><!-- <i class="fab fa-linkedin-in mr-2"></i> Font Awesome fontawesome.com --></a>
 							</li>
                       </ul>
+					  </center>
 						
 					  </div>
 					</div>
