--- a/Research Website.html
+++ b/Research Website.html
@@ -652,7 +652,7 @@
 				<h1>Meet Our Team</h1>
 				<br>
 				<div class="row row-cols-1 row-cols-md-3 g-4">
-				<!--Vishan Sir-->
+				<!--Supervisor-->
 				  <div class="col supervisor">
 					<div class="card h-100" style="width: 18rem;">
 					  <img src="..." class="card-img-top" alt="Mr. Vishan Jayasinghearachchi">
@@ -663,12 +663,12 @@
 						<p>Sri Lanka Institute of Information Technology</p>
 						<b><h6>Department</b></h6>
 						<p>Information Technology</p>
-						<a class="card-text mr-4" style="cursor: pointer;" href="https://scholar.google.com/citations?hl=en&user=3ETcvLMAAAAJ"><img src="Images/gscholar.png" width="35px" height="35px"></img></a>
+						<center><a class="card-text mr-4" style="cursor: pointer;" href="https://scholar.google.com/citations?hl=en&user=3ETcvLMAAAAJ"><img src="Images/gscholar.png" width="35px" height="35px">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp </center></img></a>
 					  </div>
 					</div>
 				  </div>
 	
-				  <!--Lakmini Madam-->
+				  <!--Co-Supervisor-->
 				  <div class="col">
 					<div class="card h-100" style="width: 18rem;">
 					  <img src="Images/Dr. Lakmini Abeywardhana.jpg" class="card-img-top" alt="Dr. Lakmini Abeywardhana">
@@ -687,6 +687,33 @@
 								  <a class="card-text mr-4" style="cursor: pointer;" href="https://www.linkedin.com/in/lakmini-abeywardhana-65283aa9/"><svg class="svg-inline--fa fa-linkedin-in fa-w-14 mr-2" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin-in" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"></path></svg><!-- <i class="fab fa-linkedin-in mr-2"></i> Font Awesome fontawesome.com --></a>
 								  &nbsp&nbsp
 								  <a class="card-text mr-4" style="cursor: pointer;" href="https://www.researchgate.net/profile/Lakmini-Abeywardhana"><img src="Images/research_gate.png" width="35px" height="35px"></img></a>
+								</li>
+							</ul>
+						</center>
+						
+					  </div>
+					</div>
+				  </div>
+				  
+				  <!--External Supervisor-->
+				  <div class="col">
+					<div class="card h-100" style="width: 18rem;">
+					  <img src="Images/Prof. Saliya Arachchige.jpg" class="card-img-top" alt="Prof. Saliya Arachchige">
+					  <div class="card-body">
+						<b><h5 class="card-title">Prof. Saliya Arachchige</b></h5>
+						<br>
+						<b><h6>External Supervisor</b></h6>
+						<p>Sri Lanka Institute of Information Technology</p>
+						<b><h6>Department</b></h6>
+						<p>Business Management</p>
+						<center>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item">
+								  <a class="card-text mr-4" style="cursor: pointer;" href="https://scholar.google.com/citations?user=MqGqWqkAAAAJ&hl=en"><img src="Images/gscholar.png" width="35px" height="35px"></img></a>
+								  &nbsp&nbsp
+								  <a class="card-text mr-4" style="cursor: pointer;" href="https://www.linkedin.com/in/professor-c-a-saliya-66188715/"><svg class="svg-inline--fa fa-linkedin-in fa-w-14 mr-2" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin-in" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"></path></svg><!-- <i class="fab fa-linkedin-in mr-2"></i> Font Awesome fontawesome.com --></a>
+								  &nbsp&nbsp
+								  <a class="card-text mr-4" style="cursor: pointer;" href="https://www.researchgate.net/profile/Candauda-Saliya"><img src="Images/research_gate.png" width="35px" height="35px"></img></a>
 								</li>
 							</ul>
 						</center>
