--- a/Research Website.html
+++ b/Research Website.html
@@ -731,7 +731,7 @@
 				<!--Udith Ayya-->
 				  <div class="col udithayya">
 					<div class="card h-100" style="width: 18rem;">
-					  <img src="..." class="card-img-top" alt="U.K.B. Dedunupitiya">
+					  <img src="Images/Udith Ayya.jpg" class="card-img-top" alt="U.K.B. Dedunupitiya">
 					  <div class="card-body">
 						<b><h5 class="card-title">U.K.B. Dedunupitiya</b></h5>
 						<br>
