--- a/Research Website.html
+++ b/Research Website.html
@@ -754,7 +754,7 @@
 				  <!--Ihshan-->
 				  <div class="col ihshan">
 					<div class="card h-100" style="width: 18rem;">
-					  <img src="..." class="card-img-top" alt="I.M.M. Ihshan">
+					  <img src="Images/Ihshan.jpg" class="card-img-top" alt="I.M.M. Ihshan">
 					  <div class="card-body">
 						<b><h5 class="card-title">I.M.M. Ihshan</b></h5>
 						<br>
