Updated the code

--- a/Research Website.html
+++ b/Research Website.html
@@ -44,20 +44,22 @@
 				</div>
 			</div>
 			
-			<div id="home" class="section">
-				<div class="maintitle">
-					<br><br><br><br><br>
-					<center><h1>Finding the Optimal Proportion of Financial Sources to Fund Government Expenditures</h1></center>
+			<section id="home">
+				<div class="homesec">
+					<div class="maintitle">
+						<br><br><br><br><br>
+						<center><h1>Finding the Optimal Proportion of Financial Sources to Fund Government Expenditures</h1></center>
+					</div>
+					<br>
+					<div class="LMarrow">
+						<center><button class="LMbtn">Learn More
+						<span class="arrow">›</span>
+						</center></button>
+					</div>
 				</div>
-				<br>
-				<div class="LMarrow">
-					<center><button class="LMbtn">Learn More
-					<span class="arrow">›</span>
-					</center></button>
-				</div>
-			</div>
+			</section>
 
-			<div id="ProjectScope" class="section">
+			<div class="ProjectScope">
 				<p class="PS">Project Scope</p>
 				<div class="LitreatureSurvey">
 			
@@ -379,7 +381,7 @@
 			</div>
 			<br><br>
 			
-			<div id="Milestones" class="section">
+			<div class="Milestones">
 				<p class="mile">Milestones</p>
 				<h1>Timeline</h1>
 				
@@ -455,7 +457,7 @@
 				</div>
 			</div>
 			
-			<div id="downloads" class="section">
+			<div class="downloads">
 				<p class="down">Downloads</p>
 				
 				<div class="documents">
@@ -649,7 +651,7 @@
 				</div>
 			</div>
 			
-			<div id="aboutus" class="section">
+			<div class="aboutus">
 				<p class="AU">About Us</p>
 				<h1>Meet Our Team</h1>
 				<br>
@@ -825,7 +827,7 @@
 			</div>
 			
 			<br>
-			<div id="contactus" class="section">
+			<div class="contactus">
 				<p class="CU">Contact Us</p>
 				<h1>Get in Touch with Our Team</h1>
 				<div class="form">
@@ -851,7 +853,7 @@
 		</div>
 
 
-		<script src="Scripts/scripts.js"></script>
+		<script src="Scripts/script.js"></script>
 
 	</body>
 </html>
