--- a/Research Website.html
+++ b/Research Website.html
@@ -7,13 +7,13 @@
 	<link rel="stylesheet" type="text/css" href="Styles/styles.css">
 	<body>
 		<div class="website">
-			<div id="myTopnav" class="topnav" >
+			<div id="myTopnav" class="topnav">
 				<div class="logoname">
 					<img src="Images/logo.png" width="100" height="100">
 				</div>
 				
 				<div class="navcontent">
-				  <a href="#" class="active">Home</a>
+				  <a href="#">Home</a>
 				   <div class="dropdown">
 					<button class="dropbtn">Project Scope 
 					  <i class="fa fa-caret-down"></i>
@@ -61,7 +61,7 @@
 			</section>
 
 			<!--Project Scope-->
-			<section class="ProjectScope">
+			<section id="ProjectScope">
 				<div class="ProjectScopesec">
 					<p class="PS">Project Scope</p>
 					<div class="LitreatureSurvey">
@@ -386,7 +386,7 @@
 			<br><br>
 			
 			<!--Milestones-->
-			<section class="Milestones">
+			<section id="Milestones">
 				<div class="Milestonessec">
 					<p class="mile">Milestones</p>
 					<h1>Timeline</h1>
@@ -465,7 +465,7 @@
 			</section>
 			
 			<!--downloads-->
-			<section class="downloads">
+			<section id="downloads">
 				<div class="downloadssec">
 					<p class="down">Downloads</p>
 					
@@ -662,7 +662,7 @@
 			</section>
 			
 			<!--About Us-->
-			<section class="aboutus">
+			<section id="aboutus">
 				<div class="aboutussec">
 					<p class="AU">About Us</p>
 					<h1>Meet Our Team</h1>
@@ -842,7 +842,7 @@
 			<br>
 			
 			<!--Contact Us-->
-			<section class="contactus">
+			<section id="contactus">
 				<div class="contactussec">
 					<p class="CU">Contact Us</p>
 					<h1>Get in Touch with Our Team</h1>
@@ -869,7 +869,8 @@
 			</section>	
 		</div>
 
+		<script src="Scripts/jquery-3.7.1.min.js"></script>
 		<script src="Scripts/script.js"></script>
-
+		
 	</body>
 </html>
