Updated the code

--- a/Research Website.html
+++ b/Research Website.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="Styles/bootstrap/bootstrap.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="Styles/styles.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="Styles/bootstrap/bootstrap.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="Styles/styles.css">
+	</head>
 	<body>
 		<div class="website">
 			<div id="myTopnav" class="topnav">
@@ -12,12 +13,13 @@
 					<img src="Images/logo.png" width="100" height="100">
 				</div>
 				
+				
 				<div class="navcontent">
-				  <a href="#">Home</a>
+				  <a href="#home">Home</a>
 				   <div class="dropdown">
-					<button class="dropbtn">Project Scope 
+					<button class="dropbtn"><a href="#projectscope">Project Scope 
 					  <i class="fa fa-caret-down"></i>
-					</button>
+					</a></button>
 					<div class="dropdown-content">
 					  <a href="#">Litreature Survey</a>
 					  <a href="#">Research Gap</a>
@@ -27,11 +29,11 @@
 					  <a href="#">Tools and Technologies</a>
 					</div>
 				  </div> 
-				  <a href="#news">Milestones</a>
+				  <a href="#milestones">Milestones</a>
 				  <div class="dropdown">
-					<button class="dropbtn">Downloads 
+					<button class="dropbtn"><a href="#downloads">Downloads 
 					  <i class="fa fa-caret-down"></i>
-					</button>
+					</button></a>
 					<div class="dropdown-content">
 					  <a href="#">Presentations</a>
 					  <a href="#">Documents</a>
@@ -61,7 +63,7 @@
 			</section>
 
 			<!--Project Scope-->
-			<section id="ProjectScope">
+			<section id="projectscope">
 				<div class="ProjectScopesec">
 					<p class="PS">Project Scope</p>
 					<div class="LitreatureSurvey">
@@ -386,7 +388,7 @@
 			<br><br>
 			
 			<!--Milestones-->
-			<section id="Milestones">
+			<section id="milestones">
 				<div class="Milestonessec">
 					<p class="mile">Milestones</p>
 					<h1>Timeline</h1>
@@ -662,7 +664,7 @@
 			</section>
 			
 			<!--About Us-->
-			<section id="aboutus">
+			<section id="about">
 				<div class="aboutussec">
 					<p class="AU">About Us</p>
 					<h1>Meet Our Team</h1>
@@ -842,7 +844,7 @@
 			<br>
 			
 			<!--Contact Us-->
-			<section id="contactus">
+			<section id="contact">
 				<div class="contactussec">
 					<p class="CU">Contact Us</p>
 					<h1>Get in Touch with Our Team</h1>
