Updated the navigation bar

--- a/Research Website.html
+++ b/Research Website.html
@@ -34,8 +34,8 @@
 					  <i class="fa fa-caret-down"></i>
 					</button></a>
 					<div class="dropdown-content">
-					  <a href="#">Documents</a>
-					  <a href="#">Presentations</a>
+					  <a href="#docs">Documents</a>
+					  <a href="#pres">Presentations</a>
 					</div>
 				  </div> 
 				  <a href="#about">About Us</a>
@@ -471,7 +471,7 @@
 				<div class="downloadssec">
 					<p class="down">Downloads</p>
 					
-					<div class="documents">
+					<div class="documents" id="docs">
 						<h1>Documents</h1>
 						<p>The documents that were used for this research are given below.</p>
 						<!--Topic Assessement Form-->
@@ -596,7 +596,7 @@
 					</div>
 					
 					<br>
-					<div class="presentations">
+					<div class="presentations" id="pres">
 						<h1>Presentations</h1>
 						<p>The presentations that were used for this research are given below.</p>
 						<!--Proposal Presentation-->
