Updated the home section

--- a/Research Website.html
+++ b/Research Website.html
@@ -46,7 +46,7 @@
 			</div>
 			
 			<!--Home-->
-			<section id="home">
+			<section id="home" class="home1">
 				<div class="homesec">
 					<div class="maintitle">
 						<br><br><br><br><br>
