Updated the Learn More button

--- a/Research Website.html
+++ b/Research Website.html
@@ -54,9 +54,9 @@
 					</div>
 					<br>
 					<div class="LMarrow">
-						<center><button class="LMbtn">Learn More
+						<center><button class="LMbtn"><a href="#projectscope">Learn More
 						<span class="arrow">›</span>
-						</center></button>
+						</center></a></button>
 					</div>
 				</div>
 			</section>
