Removed unnecessary code

--- a/Research Website.html
+++ b/Research Website.html
@@ -388,7 +388,7 @@
 			<br><br>
 			
 			<!--Milestones-->
-			<section id="milestones">
+			<section id="milestones" class="milestones1">
 				<div class="Milestonessec">
 					<p class="mile">Milestones</p>
 					<h1>Timeline</h1>
@@ -873,7 +873,7 @@
 
 		<script src="Scripts/jquery-3.7.1.min.js"></script>
 		<script src="Scripts/script.js"></script>
-		<script src="Scripts/script1.js"></script>
+		
 		
 	</body>
 </html>
