Added background for downloads section

--- a/Research Website.html
+++ b/Research Website.html
@@ -468,7 +468,8 @@
 			</section>
 			
 			<!--downloads-->
-			<section id="downloads">
+			<section id="downloads" class="downloads1">
+				<br>
 				<div class="downloadssec">
 					<p class="down">Downloads</p>
 					
@@ -662,6 +663,7 @@
 							  </div>
 					</div>
 				</div>
+				<br><br><br>
 			</section>
 			
 			<!--About Us-->
